Gjør web-xmlen renere og benytter reast-easy for å laste weblisteners